merubah file uts.htmldan menambah file NewTextDocument.txt

--- a/uts.html
+++ b/uts.html
@@ -1,7 +1,8 @@
 <html>
 <head><title>percobaan Git</title></head>
 <body>
-<p> ini halaman percobaan uts Git percobaan pertama</p>
+<p> ini halaman percobaan uts Git percobaan pertama saya</p>
+<p> halaman ini adalah halaman utama </p>
 </body>
 <html>
 
